--- a/Plugin/pom.xml
+++ b/Plugin/pom.xml
@@ -184,6 +184,14 @@
         </dependency>
         <dependency>
             <groupId>de.corneliusmay</groupId>
+            <artifactId>SilkSpawners_v2-v1_21_R0.1</artifactId>
+            <version>v1_21_R0.1</version>
+            <type>jar</type>
+            <scope>compile</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>de.corneliusmay</groupId>
             <artifactId>SilkSpawners_v2-API</artifactId>
             <version>API</version>
             <type>jar</type>
