--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>v1_20_R2</module>
         <module>v1_20_R3</module>
         <module>v1_20_R4</module>
+        <module>v1_21_R0.1</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -47,7 +48,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.26</version>
+            <version>1.18.34</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
